将index.tsx中的布局代码移动带到_app.tsx中，并完善菜单递归函数

--- a/styles/Home.module.less
+++ b/styles/Home.module.less
@@ -13,6 +13,8 @@
 .main {
   transition: margin-left .3s;
   .header {
+    position: sticky;
+    top: 0;
     height: 40px;
     background-color: #fff;
     border-bottom: 1px solid #f1f1f1;
